Do not register LongTaskDetector twice

This CL adds a check to ensure that the LongTaskDetector only registers itself
as a TaskTimeObserver when the number of |observers_| jumps from 0 to 1.

Bug: 831925
Change-Id: Ida4932b7f84beeceb07255e8ef87935cbc8e8b76
Reviewed-on: https://chromium-review.googlesource.com/1010765
Reviewed-by: Kenneth Russell <kbr@chromium.org>
Reviewed-by: Timothy Dresser <tdresser@chromium.org>
Commit-Queue: Nicolás Peña Moreno <npm@chromium.org>
Cr-Commit-Position: refs/heads/master@{#550798}
Former-commit-id: 8358f8f5b7a61b36bed52cd05d3c38299d4a52e6